<resources>
    <string name="fcm_message">AQUAE</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Aquae</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="app_name">Aquae</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="water">Water Stations</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm">Confirm</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="scheduled_delivery">Deliver</string>
    <string name="water_type">Water Type</string>
    <string name="refill">Refill</string>
    <string name="purchase">Purchase</string>
    <string name="mineral">Mineral</string>
    <string name="distilled">Distilled</string>
    <string name="purified">Purified</string>
    <string name="alkaline">Alkaline</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="remove">REMOVE</string>
    <string name="total">TOTAL</string>
    <string name="checkout">CHECKOUT</string>
    <string name="select_all">Select All</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="add_items_to_cart_now">Add items to cart now</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="cebu_city">Cebu City</string>
    <string name="choose_a_barangay">Choose a Barangay</string>
    <string name="building_street_and_etc">Building, Street, and etc…</string>
    <string name="barangay">Barangay</string>
    <string name="select_location">Select Location</string>
    <string name="for_more_accurate_location">For more accurate location</string>
    <string name="payment_method">Payment Method</string>
    <string name="additional_information">ADDITIONAL INFORMATION</string>
    <string name="paypal">PayPal</string>
    <string name="cash_on_delivery_cod">Cash On Delivery (COD)</string>
    <string name="add_notes">Add Notes</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="start_shopping">START SHOPPING</string>
    <string name="proceed">PROCEED</string>
    <string name="order_summary">Order Review</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="address_2">Address 2</string>
    <string name="address_1">Address 1</string>
    <string name="address">Address</string>
    <string name="note_please_specify_building_street_and_etc"><i>Note: Please specify building, street, and etc...</i></string>
    <string name="delivery_payments">Delivery</string>
    <string name="add_new">Add New</string>
    <string name="add_new_address">Add New Address</string>
    <string name="order_time">Order Time</string>
    <string name="how_much_would_you_like_to_cash_in">How much would you like to cash-in?</string>
    <string name="amount">Amount</string>
    <string name="wallet">Wallet</string>
    <string name="balance_php">Balance (PHP)</string>
    <string name="title_activity_maps">Map</string>
    <string name="delivery_schedule">Delivery Schedule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
